# components-private

simple-audio-video-transcription-on-aws/: .gitignore  Pipfile  README.md  cdk-helper.ts  cdk.json  inputs.ts  package.json  pnpm-lock.yaml  simple-audio-video-transcription.ts  values.default.yaml
simple-audio-video-transcription-on-aws/code/: Dockerfile  api.py  auth.py  requirements.txt  workflow.py
simple-batch-job-status-register-on-aws/: .gitignore  README.md  cdk.json  package.json  pnpm-lock.yaml  simple-batch-runtime-monitoring-on-aws.ts
simple-batch-job-status-register-on-aws/code/: Dockerfile  app.py  pyproject.toml
simple-batch-job-status-register-on-aws/job/: Dockerfile  pyproject.toml  script.py  test.py
simple-multiarch-container-build-pipelines/: README.md  cdk-helper.ts  cdk.json  inputs.ts  package.json  pnpm-lock.yaml  simple-multi-arch-container-build-pipelines.ts  simple-multiarch-container-build-pipelines.ts  values.default.yaml
simple-python-webhook/: README.md  cdk.json  example.json  package.json  pnpm-lock.yaml  simple-python-webhook-stack.ts
simple-python-webhook/code/: Dockerfile  handler.py  pyproject.toml
