[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Jason Forte <hello@jforte.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.154"
simplejson = "^3.19.2"
awslambdaric = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
